--- a/index copy.html
+++ b/index copy.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>title name</title>
+    <title>title name1</title>
     <link rel="icon" href="./img/logo01.ico">
     <link rel="stylesheet" href="./css/style copy.css">
     <script src="./jQuery/js/jquery-1.11.3.min.js"></script>
